--- a/build.xml
+++ b/build.xml
@@ -82,6 +82,23 @@
 			</classpath>
 		</java>
 	</target>
+	
+    <target name="testLadder" depends="jar-spacesettlers">
+            <java classname="spacesettlers.ladder.RunLadder"
+                  fork="true"
+                  dir="src"
+                      classpath="${dist}/spacesettlers.jar">
+	        <jvmarg value="-Xmx10G" />
+                    <arg line="--graphics false "/>
+		<arg line="--configPath ../config/ladder/"/>
+                <arg line="--simulatorConfigFile SpacesettlersConfig.xml"/>
+                    <arg line="--ladderConfigFile SelfLadderConfig.xml"/>
+                    <classpath>
+                        <pathelement location="${dist}/spacewar.jar"/>
+                    </classpath>
+            </java>
+	</target>
+	
 
 	<target name="doc" depends="init">
 	    <javadoc destdir="docs/api"
