added a new aggressive heursitic team that handles being a singleton agent team (for project 1) and config files for both project paths

--- a/build.xml
+++ b/build.xml
@@ -91,15 +91,45 @@
 	        <jvmarg value="-Xmx10G" />
                     <arg line="--graphics false "/>
 		<arg line="--configPath ../config/ladder/"/>
-                <arg line="--simulatorConfigFile SpacesettlersConfig.xml"/>
+                <arg line="--simulatorConfigFile SpaceSettlersConfig.xml"/>
                     <arg line="--ladderConfigFile SelfLadderConfig.xml"/>
                     <classpath>
                         <pathelement location="${dist}/spacewar.jar"/>
                     </classpath>
             </java>
 	</target>
-	
 
+	<target name="spacesettlers-coop" depends="jar-spacesettlers">
+		<java classname="spacesettlers.simulator.RunSimulator"
+		      fork="true" 
+		      dir="src"
+			  classpath="${dist}/spacesettlers.jar">
+			<jvmarg	value="-Xmx10G" />
+			<arg line="--graphics true "/>
+			<arg line="--configPath ../config/heuristicCooperative/"/>
+			<arg line="--simulatorConfigFile SpaceSettlersConfig.xml"/>
+			<classpath>
+				<pathelement location="${dist}/spacesettlers.jar"/>
+			</classpath>
+		</java>
+	</target>
+
+	<target name="spacesettlers-compete" depends="jar-spacesettlers">
+		<java classname="spacesettlers.simulator.RunSimulator"
+		      fork="true" 
+		      dir="src"
+			  classpath="${dist}/spacesettlers.jar">
+			<jvmarg	value="-Xmx10G" />
+			<arg line="--graphics true "/>
+			<arg line="--configPath ../config/heuristicCompetitive/"/>
+			<arg line="--simulatorConfigFile SpaceSettlersConfig.xml"/>
+			<classpath>
+				<pathelement location="${dist}/spacesettlers.jar"/>
+			</classpath>
+		</java>
+	</target>
+
+	
 	<target name="doc" depends="init">
 	    <javadoc destdir="docs/api"
 	             author="true"
